<resources>
    <string name="app_name">"24 Hours</string>
    <string name="User_info_Screen_title">Tell us more about You</string>
    <string name="prompt_email">Email(required)</string>
    <string name="prompt_password">Password (required)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_up_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="OK">✔</string>
    <string name="result"></string>
    <string name="fnHint">First name(optional)</string>
    <string name="LnHint">Last name(optional)</string>
    <string name="passwordCriteria1">Password is too short min (8)</string>
    <string name="passwordCriteria2">An UPPERCASE letter is a must</string>
    <string name="passwordCriteria3">Lowercase Letter missing</string>
    <string name="passwordCriteria4">Must have a Number</string>
    <string name="passwordMatching">Passwords Don\'t Match</string>
    <string name="welcomeUser">Hi, %1$s </string>
    <string name="existingUser">Already Registered? Login</string>
    <string name="wait">\u23F3 Please wait while we sign you up...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="guest">Guest</string>
    <string name="error_match_failed">Password does not match</string>
    <string name="sinup_dialog">Not a member? sign up here.</string>
    <string name="signin_dialog">Already A memeber? sign in here</string>
    <string name="user_not_found">User not Found</string>
    <string name="verifyText">A Verification email has been sent to your email address.</string>
    <string name="resend">Resend</string>
    <string name="resetPassword">Forgot your password? reset here</string>
    <string name="title_activity_login2">Reset Password</string>
    <string name="reset">Reset Password</string>
    <string name="password">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="confirm">Confirm ✔</string>
    <string name="eVarification">24H | E- Varification</string>
    <string name="wait1">\u23F3 Please Wait... While we register you</string>
    <string name="wait2">\u23F3 Hold On Just A few, Gettin\' you ready...</string>
    <string name="wait3">Welcome To 24 %1$s</string>
    <string name="wait4">\u23F3 We Missed You, Setting you Up...</string>
    <string name="wait5">Just a sec, %1$s</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="first_name_query">What is your first name?</string>
    <string name="last_name_query">What is your second name?</string>
    <string name="phoneNumberQuery">Enter your Phone Number</string>
    <string name="age_query">How old are You? </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="skipOn">Skip>></string>
    <string name="skip">Skip</string>
    <string name="sexesTag">Gender</string>
    <string name="error_invalid_age">Invalid age</string>
    <string name="gymTitle">GYM/Sport</string>
    <string name="studyTitle">Study</string>
    <string name="meetingTitle">Meeting</string>
    <string name="socialTitle">Social</string>
    <string name="timetable">Timetable</string>
    <string name="chillTitle">Chill</string>
    <string name="goBack"><![CDATA[<< BACK]]></string>
    <string name="ok">\u2713</string>
    <string name="welcome_title">Welcome to 24 Hours</string>
    <string name="welcome">Welcome %1$s,\nI am H-Bot Your 24H Guide.\n\nWe need to gather some information about your interests\nto create a more enjoyable experience.</string>
    <string name="welcome_start">Sounds Good!</string>
    <string name="welcome_later">Maybe Later</string>
    <string name="username_Query">Create Username</string>
    <string name="saving_username">Saving Username\\nJust a sec....</string>
    <string name="title_gymactivity_list">Items</string>
    <string name="title_gymactivity_detail">GymActivity Detail</string>
    <string name="defaultG">Default</string>
    <string name="CustomG">Make Your own</string>
    <string name="bodytype_thin">Ectomorph</string>
    <string name="bodytype_fat">Endomorph</string>
    <string name="bodytype_muscular">Mesomorph</string>
    <string name="bodytype">Select A Body type</string>
    <string name="bodytype_Ectomorph">Ectomorphs are characterized as having long, slim, and thin muscles/limbs and low fat storage. Ectomorphs are not predisposed to store fat nor build muscle.</string>
    <string name="bodytype_Mesomorph">Mesomorphs are the “lucky ones.” They have medium bones, solid torso, low fat levels, wide shoulders with a narrow waist.</string>
    <string name="bodytype_Endomorph">Endomorphs play the game of Weight Loss on extreme difficulty. These are people with wider waists, large bone structures, and are predisposed to storing fat instead of building muscle.</string>
    <string name="chest">Chest</string>
    <string name="back">Back</string>
    <string name="arms">Arms</string>
    <string name="shoulder">Shoulder</string>
    <string name="quads">Quads</string>
    <string name="calf">Calves</string>
    <string name="core">Core</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_type">Weight-Loss</string>
    <string name="toning">I want to Tone Up</string>
    <string name="goals">Select Your Focus</string>
    <string name="lvl1">Beginner</string>
    <string name="lvl2">Intermediate</string>
    <string name="lvl3">Advanced</string>
    <string name="o1">Version 1.0</string>
    <string name="o2">Version 2.0</string>
    <string name="o3">Version 3.0</string>
    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="check">Check list</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="day_mon">Monday</string>
    <string name="day_tues">Tuesday</string>
    <string name="day_wed">Wednesday</string>
    <string name="day_thurs">Thursday</string>
    <string name="day_fri">Friday</string>
    <string name="day_sat">Saturday</string>
    <string name="day_sun">Sunday</string>
    <string name="pick_day">What Day(s) do you prefer to workout on?</string>
    <string name="aboutgym">Selecting \"Setup now\"  will take to a special set-up page\nSelecting \"Use Default\" we will randomly create workouts for every body part, \nand disperse it around the CALENDER</string>
    <string name="setup_now">Setup Now</string>
    <string name="addPic">Choose PIC</string>
    <string name="take_pic">TAKE PIC</string>
    <string name="profile_pic">Profile Picture Setup</string>
    <string name="welcome_guest">Hi, Guest</string>
    <string name="socialInfo1">Welcome to Social setup.</string>
    <string name="socailInfo2">By selecting \'Setup event\', \nYou will be teleported to an event creator zone which has been optimized based on your age,\n but hey don\'t worry you can also add your own event.\nIf you don't have time now do it later via the skip button. </string>
    <string name="setup_event">Setup Event</string>
    <string name="title_activity_social">socialActivity</string>
    <string name="social_sport">Sport</string>
    <string name="Social_cinema">Cinema</string>
    <string name="social_birthday">Birthday</string>
    <string name="Social_shopping">Shopping</string>
    <string name="social_awards">Awards ceremony</string>
    <string name="Social_date">Date</string>
    <string name="social_gaming">Gaming</string>
    <string name="Social_club">Club</string>
    <string name="social_xmas">X-mas</string>
    <string name="social_drink">Drink with buddy</string>
    <string name="social_wedding">Wedding</string>
    <string name="pickFrom">Pick from one of the templates</string>
    <string name="social_sport_hint">Enter Sport</string>
    <string name="or">Or</string>
    <string name="location">At(Location):</string>
    <string name="startTime">From:</string>
    <string name="endTime">To:</string>
    <string name="cine">Cinema</string>
    <string name="movie">Movie Title:</string>
    <string name="runtime">Duration:</string>
    <string name="startingTime">Starting At:</string>
    <string name="eet">We Estimated the end time as: </string>
    <string name="birthday">Birthday</string>
    <string name="whos">Who\'s Birthday? </string>
    <string name="where">Where is it at:</string>
    <string name="pic">Upload picture of invite</string>
    <string name="cover">Cover</string>
    <string-array name="occurance">
        <item>Once</item>
        <item>Weekly</item>
        <item>Monthly</item>

    </string-array>
    <string-array name="occurance2">
        <item>Once</item>
        <item>Weekly</item>


    </string-array>
    <string name="sleepO">Sleep-Over</string>
    <string name="extraInfo">Extra Info:</string>
    <string name="notes">Notes:</string>
    <string name="date">On(date):</string>
    <string name="awardCeremony">Award Ceremony</string>
    <string name="Dating">Date</string>
    <string name="Clubling">Clubing</string>
    <string name="Drink">Go For A Pint</string>
    <string name="with">With </string>
    <string name="wed">Wedding</string>
    <string name="whosWed">Who\'s Wedding</string>
    <string name="plusOne">Plus One:</string>
    <string name="custom_s">Custom</string>
    <string name="selectAday">Select A Day</string>
    <string name="selectStart">Select Start Time</string>
    <string name="selectEnd">Select End  at</string>
    <string name="setTime">Set Ending time to %1$s</string>
    <string name="setstarttime">Set Start time To %1$s</string>
    <string name="setDate">Set Date to %1$s</string>
    <string name="social_cinema_hint">Movie Title</string>
    <string name="social_cinema">Cinema</string>
    <string name="SetDuration">Enter Duration(in Mins):</string>
    <string name="finishAt">Finished At:</string>
    <string name="social_birthday_hint">Who\'s Birthday</string>
    <string name="outside_of_invitation">Outside of invite(Cover)</string>
    <string name="inside_of_invitation">inside of invite</string>
    <string name="upload_invite">Upload Photos of Invite </string>
    <string name="sportDefaultHeading">Sport, Location, Date,  From, To.</string>
    <string name="b_heading">Who\'s Birthday, Location, Date, From, To</string>
    <string name="c_tag">Movie title, Location, Date, From, To</string>
    <string name="emptyField">This Field can\'t be empty</string>
    <string name="g_tag">Gaming</string>
    <string name="social_gaming_hint">Game, Location, Date, Start, End</string>
    <string name="logout">Log out</string>
    <string name="signout">Are You sure You Want To Logout?</string>
    <string name="nope">Never Mind</string>
    <string name="yeah">Yes Please!</string>
    <string name="resetPasswordMsg">Hmmm Forgotten your password?</string>
    <string name="subrpMsg">To reset your password just enter your email, press the "Reset Password" Button and check email to follow instruction ☺</string>
</resources>