<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/logout"
        android:textAllCaps="true"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="18sp" />

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/colorAccent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/signout"
        android:textAlignment="center"
        android:textColor="@color/mainscreen_dark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signout_confirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/aqua_controlHight"
            android:backgroundTint="@color/aqua_textPrimary"
            android:text="@string/yeah"
            android:textColor="@color/background_mid_dark" />

        <Button
            android:id="@+id/signout_cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nope"
            android:textColor="@color/background_mid_dark" />
    </LinearLayout>
</LinearLayout>