<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    tools:context="ie.ul.o.daysaver.FullscreenActivity"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/PageOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="visible">


                <Button
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@android:color/transparent"
                    android:onClick="goToNextPage"
                    android:text="@string/next"
                    android:textColor="@android:color/holo_blue_bright"
                    android:textSize="18sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:hint="@string/first_name_query"
                        android:paddingTop="30dp"
                        android:textColorHint="@android:color/holo_blue_bright" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:hint="@string/last_name_query"
                        android:paddingTop="30dp"
                        android:textColorHint="@android:color/holo_blue_bright" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:id="@+id/age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:hint="@string/age_query"
                        android:paddingBottom="20dp"
                        android:paddingTop="30dp"
                        android:textColorHint="@android:color/holo_blue_bright" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/phoneNumber"
                        style="@android:style/Widget.AutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="casual"
                        android:hint="@string/phoneNumberQuery"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/sexesTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:paddingTop="14dp"
                    android:text="@string/sexesTag"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_purple"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="6dp">

                    <RadioGroup
                        android:id="@+id/sexes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/femaleRadioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="getSelectectedRadioButton"
                            android:text="@string/female"
                            android:textColor="#def413b8" />

                        <RadioButton
                            android:id="@+id/maleRadioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="getSelectectedRadioButton"
                            android:text="@string/male"
                            android:textColor="@color/colorPrimary" />

                        <RadioButton
                            android:id="@+id/otherRadiobtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="getSelectectedRadioButton"
                            android:text="@string/other" />


                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/UsernamePage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ProgressBar
                    android:id="@+id/pic_upload"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />


                <ImageButton
                    android:id="@+id/profilePic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/profilebutton"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:fontFamily="@font/aldrich"
                    android:hint="@string/username_Query"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/createUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="20dp"
                    android:onClick="checkIfUsernameIsTaken"
                    android:text="@string/ok" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
