<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/female_runner_painted"
    android:backgroundTint="@android:color/holo_red_light"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="172dp"
        android:layout_height="177dp"
        android:layout_marginLeft="-10dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/hbot_gym" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_red_light"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/gymTitle"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/aldrich"
            android:lineSpacingExtra="10sp"
            android:text="@string/aboutgym"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/gi_Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/defaultG" />

            <Button
                android:id="@+id/gi_setupnow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="?attr/colorControlActivated"
                android:paddingTop="5dp"
                android:text="@string/setup_now"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>